@@ -33,8 +33,7 @@ import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.indices.SystemIndexDescriptor;
-import org.elasticsearch.script.Script;
-import org.elasticsearch.script.ScriptType;
+import org.elasticsearch.search.fetch.subphase.FetchSourceContext;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskManager;
 import org.elasticsearch.xpack.core.XPackPlugin;
@@ -48,6 +47,7 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.ByteBuffer;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -66,13 +66,6 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
     public static final String HEADERS_FIELD = "headers";
     public static final String RESPONSE_HEADERS_FIELD = "response_headers";
     public static final String EXPIRATION_TIME_FIELD = "expiration_time";
-    public static final String EXPIRATION_TIME_SCRIPT =
-        " if (ctx._source.expiration_time < params.expiration_time) { " +
-        "     ctx._source.expiration_time = params.expiration_time; " +
-        " } else { " +
-        "     ctx.op = \"noop\"; " +
-        " }";
-
     public static final String RESULT_FIELD = "result";
 
     // Usually the settings, mappings and system index descriptor below
@@ -138,6 +131,7 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
 
     private final String index;
     private final Client client;
+    private final Client clientWithOrigin;
     private final SecurityContext securityContext;
     private final NamedWriteableRegistry registry;
     private final Writeable.Reader<R> reader;
@@ -151,16 +145,31 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
                                  NamedWriteableRegistry registry) {
         this.index = index;
         this.securityContext = new SecurityContext(clusterService.getSettings(), threadContext);
-        this.client = new OriginSettingClient(client, origin);
+        this.client = client;
+        this.clientWithOrigin = new OriginSettingClient(client, origin);
         this.registry = registry;
         this.reader = reader;
     }
 
     /**
-     * Returns the internal client with origin.
+     * Returns the internal client wrapped with the async user origin.
+     */
+    public Client getClientWithOrigin() {
+        return clientWithOrigin;
+    }
+
+    /**
+     * Returns the internal client.
      */
     public Client getClient() {
         return client;
+    }
+
+    /**
+     * Returns the authentication information, or null if the current context has no authentication info.
+     **/
+    public Authentication getAuthentication() {
+        return securityContext.getAuthentication();
     }
 
     /**
@@ -179,7 +188,7 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
             .create(true)
             .id(docId)
             .source(source, XContentType.JSON);
-        client.index(indexRequest, listener);
+        clientWithOrigin.index(indexRequest, listener);
     }
 
     /**
@@ -198,24 +207,25 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
                 .id(docId)
                 .doc(source, XContentType.JSON)
                 .retryOnConflict(5);
-            client.update(request, listener);
+            clientWithOrigin.update(request, listener);
         } catch(Exception e) {
             listener.onFailure(e);
         }
     }
 
     /**
-     * Extends the expiration time of the provided <code>docId</code> if the place-holder document is still present (update).
+     * Updates the expiration time of the provided <code>docId</code> if the place-holder
+     * document is still present (update).
      */
-    public void extendExpirationTime(String docId, long expirationTimeMillis, ActionListener<UpdateResponse> listener) {
-        Script script = new Script(ScriptType.INLINE, "painless", EXPIRATION_TIME_SCRIPT,
-            Map.of(EXPIRATION_TIME_FIELD, expirationTimeMillis));
-        UpdateRequest request = new UpdateRequest()
-            .index(index)
+    public void updateExpirationTime(String docId,
+                              long expirationTimeMillis,
+                              ActionListener<UpdateResponse> listener) {
+        Map<String, Object> source = Collections.singletonMap(EXPIRATION_TIME_FIELD, expirationTimeMillis);
+        UpdateRequest request = new UpdateRequest().index(index)
             .id(docId)
-            .script(script)
+            .doc(source, XContentType.JSON)
             .retryOnConflict(5);
-        client.update(request, listener);
+        clientWithOrigin.update(request, listener);
     }
 
     /**
@@ -225,7 +235,7 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
                                ActionListener<DeleteResponse> listener) {
         try {
             DeleteRequest request = new DeleteRequest(index).id(asyncExecutionId.getDocId());
-            client.delete(request, listener);
+            clientWithOrigin.delete(request, listener);
         } catch(Exception e) {
             listener.onFailure(e);
         }
@@ -234,11 +244,10 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
     /**
      * Returns the {@link AsyncTask} if the provided <code>asyncTaskId</code>
      * is registered in the task manager, <code>null</code> otherwise.
-     *
-     * This method throws a {@link ResourceNotFoundException} if the authenticated user
-     * is not the creator of the original task.
      */
-    public <T extends AsyncTask> T getTask(TaskManager taskManager, AsyncExecutionId asyncExecutionId, Class<T> tClass) throws IOException {
+    public <T extends AsyncTask> T getTask(TaskManager taskManager,
+                                           AsyncExecutionId asyncExecutionId,
+                                           Class<T> tClass) throws IOException {
         Task task = taskManager.getTask(asyncExecutionId.getTaskId().getId());
         if (tClass.isInstance(task) == false) {
             return null;
@@ -247,7 +256,24 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
         if (asyncTask.getExecutionId().equals(asyncExecutionId) == false) {
             return null;
         }
+        return asyncTask;
+    }
 
+
+    /**
+     * Returns the {@link AsyncTask} if the provided <code>asyncTaskId</code>
+     * is registered in the task manager, <code>null</code> otherwise.
+     *
+     * This method throws a {@link ResourceNotFoundException} if the authenticated user
+     * is not the creator of the original task.
+     */
+    public <T extends AsyncTask> T getTaskAndCheckAuthentication(TaskManager taskManager,
+                                                                 AsyncExecutionId asyncExecutionId,
+                                                                 Class<T> tClass) throws IOException {
+        T asyncTask = getTask(taskManager, asyncExecutionId, tClass);
+        if (asyncTask == null) {
+            return null;
+        }
         // Check authentication for the user
         final Authentication auth = securityContext.getAuthentication();
         if (ensureAuthenticatedUserIsSame(asyncTask.getOriginHeaders(), auth) == false) {
@@ -257,13 +283,12 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
     }
 
     private void getEncodedResponse(AsyncExecutionId asyncExecutionId,
-                                      boolean restoreResponseHeaders,
-                                      ActionListener<Tuple<String, Long>> listener) {
-        final Authentication current = securityContext.getAuthentication();
+                                    boolean restoreResponseHeaders,
+                                    ActionListener<Tuple<String, Long>> listener) {
         GetRequest internalGet = new GetRequest(index)
             .preference(asyncExecutionId.getEncoded())
             .id(asyncExecutionId.getDocId());
-        client.get(internalGet, ActionListener.wrap(
+        clientWithOrigin.get(internalGet, ActionListener.wrap(
             get -> {
                 if (get.isExists() == false) {
                     listener.onFailure(new ResourceNotFoundException(asyncExecutionId.getEncoded()));
@@ -273,7 +298,7 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
                 // check the authentication of the current user against the user that initiated the async task
                 @SuppressWarnings("unchecked")
                 Map<String, String> headers = (Map<String, String>) get.getSource().get(HEADERS_FIELD);
-                if (ensureAuthenticatedUserIsSame(headers, current) == false) {
+                if (ensureAuthenticatedUserIsSame(headers, securityContext.getAuthentication()) == false) {
                     listener.onFailure(new ResourceNotFoundException(asyncExecutionId.getEncoded()));
                     return;
                 }
@@ -318,13 +343,13 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
      * @param statusProducer – a producer of the status from the stored async search response and expirationTime
      * @param listener – listener to report result to
      */
-    public void getStatusResponse(
-        AsyncExecutionId asyncExecutionId,
-            BiFunction<R, Long, AsyncStatusResponse> statusProducer, ActionListener<AsyncStatusResponse> listener) {
+    public void getStatusResponse(AsyncExecutionId asyncExecutionId,
+                                  BiFunction<R, Long, AsyncStatusResponse> statusProducer,
+                                  ActionListener<AsyncStatusResponse> listener) {
         GetRequest internalGet = new GetRequest(index)
             .preference(asyncExecutionId.getEncoded())
             .id(asyncExecutionId.getDocId());
-        client.get(internalGet, ActionListener.wrap(
+        clientWithOrigin.get(internalGet, ActionListener.wrap(
             get -> {
                 if (get.isExists() == false) {
                     listener.onFailure(new ResourceNotFoundException(asyncExecutionId.getEncoded()));
@@ -343,17 +368,32 @@ public final class AsyncTaskIndexService<R extends AsyncResponse<R>> {
     }
 
     /**
-     * Ensures that the current user can read the specified response without actually reading it
-     */
-    public void authorizeResponse(AsyncExecutionId asyncExecutionId,
-                                  boolean restoreResponseHeaders,
-                                  ActionListener<R> listener) {
-        getEncodedResponse(asyncExecutionId, restoreResponseHeaders, ActionListener.wrap(
-            (t) -> listener.onResponse(null),
-            listener::onFailure
-        ));
-    }
+     * Checks if the current user's authentication matches the original authentication stored
+     * in the async search index.
+     **/
+    void ensureAuthenticatedUserCanDeleteFromIndex(AsyncExecutionId executionId, ActionListener<Void> listener) {
+        GetRequest internalGet = new GetRequest(index)
+            .preference(executionId.getEncoded())
+            .id(executionId.getDocId())
+            .fetchSourceContext(new FetchSourceContext(true, new String[] { HEADERS_FIELD }, new String[] {}));
 
+        clientWithOrigin.get(internalGet, ActionListener.wrap(
+            get -> {
+                if (get.isExists() == false) {
+                    listener.onFailure(new ResourceNotFoundException(executionId.getEncoded()));
+                    return;
+                }
+                // Check authentication for the user
+                @SuppressWarnings("unchecked")
+                Map<String, String> headers = (Map<String, String>) get.getSource().get(HEADERS_FIELD);
+                if (ensureAuthenticatedUserIsSame(headers, securityContext.getAuthentication())) {
+                    listener.onResponse(null);
+                } else {
+                    listener.onFailure(new ResourceNotFoundException(executionId.getEncoded()));
+                }
+            },
+            exc -> listener.onFailure(new ResourceNotFoundException(executionId.getEncoded()))));
+    }
 
     /**
      * Extracts the authentication from the original headers and checks that it matches
